--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "next": "10.2.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-minimal-side-navigation": "^1.9.2",
         "storyblok-js-client": "^4.0.9",
         "storyblok-react": "^0.1.2"
     },
